--- a/pom.xml
+++ b/pom.xml
@@ -57,6 +57,8 @@
 		<version.nimbus>4.23</version.nimbus>
 		<spring-boot.bom.version>1.5.8.Final-redhat-1</spring-boot.bom.version>
 		<version.spring-boot>1.5.8.RELEASE</version.spring-boot>
+                <version.vertx>3.4.2.redhat-006</version.vertx>
+                <version.vertx-maven-plugin>1.0.7</version.vertx-maven-plugin>
 	</properties>
 
 	<dependencyManagement>
@@ -76,12 +78,19 @@
 				<scope>import</scope>
 			</dependency>
 			<dependency>
-		        <groupId>me.snowdrop</groupId>
-		        <artifactId>spring-boot-bom</artifactId>
-		        <version>${spring-boot.bom.version}</version>
-		        <type>pom</type>
-		        <scope>import</scope>
-      </dependency>
+		          <groupId>me.snowdrop</groupId>
+		          <artifactId>spring-boot-bom</artifactId>
+		          <version>${spring-boot.bom.version}</version>
+		          <type>pom</type>
+		          <scope>import</scope>
+                        </dependency>
+                        <dependency>
+			  <groupId>io.vertx</groupId>
+			  <artifactId>vertx-dependencies</artifactId>
+			  <version>${version.vertx}</version>
+			  <type>pom</type>
+			  <scope>import</scope>
+      			</dependency>
 			<dependency>
 				<groupId>org.jboss.resteasy</groupId>
 				<artifactId>resteasy-client</artifactId>
